Add services and routers
