# src/app.js
@@ -3,10 +3,10 @@ const swaggerUI = require('swagger-ui-express');
 const path = require('path');
 const YAML = require('yamljs');
 
-// const clientRouter = require('./resources/clients/client.router');
-// const productRouter = require('./resources/products/product.router');
-// const orderRouter = require('./resources/orders/order.router');
-const userRouter = require('./resources/users/user.router');
+const clientRouter = require('./resources/clients/client.router');
+const productRouter = require('./resources/products/product.router');
+const orderRouter = require('./resources/orders/order.router');
+// const userRouter = require('./resources/users/user.router');
 
 const app = express();
 const swaggerDocument = YAML.load(path.join(__dirname, '../doc/api.yaml'));
@@ -23,9 +23,9 @@ app.use('/', (req, res, next) => {
   next();
 });
 
-// app.use('/clients', clientRouter);
-// app.use('/products', productRouter);
-// app.use('/orders', orderRouter);
-app.use('/users', userRouter);
+app.use('/clients', clientRouter);
+app.use('/products', productRouter);
+app.use('/orders', orderRouter);
+// app.use('/users', userRouter);
 
 module.exports = app;
